applications/immich/templates/postgresql.yaml
#Upgrade
# -- Find all columns using pgvecto-rs types
# SELECT table_name, column_name, data_type, udt_name
# FROM information_schema.columns
# WHERE udt_name IN ('vector', 'svector', 'bvector');
#
# -- Find all vector indexes
# SELECT indexname, indexdef
# FROM pg_indexes
# WHERE indexdef ILIKE '%using hnsw%'
#    OR indexdef ILIKE '%using ivfflat%'
#    OR indexdef ILIKE '%using flat%';
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-postgres-deployment
  namespace: immich # Ensure this matches your service namespace
  labels:
    app: immich-postgres
spec:
  replicas: 1 # Typically 1 for a single PostgreSQL instance
  selector:
    matchLabels:
      app: immich-postgres
  template:
    metadata:
      labels:
        app: immich-postgres
    spec:
      containers:
        - name: postgres
          image: ghcr.io/immich-app/postgres:16-vectorchord1.1.1
          #image: pgvector/pgvector:pg17 # Image with pgvector pre-installed. You can specify a version like 'ankane/pgvector:pg15'
          #####image: ghcr.io/tensorchord/pgvecto-rs:pg16-v0.3.0
          #image: ghcr.io/immich-app/postgres:16-vectorchord0.3.0-pgvectors0.3.0
          #######image: ghcr.io/immich-app/postgres:16-vectorchord0.4.3-pgvectors0.3.0
          #image: ghcr.io/immich-app/postgres:16-vectorchord0.5.3-pgvectors0.8.1
          #image: ghcr.io/immich-app/postgres:16-vectorchord0.5.3
          #image: ghcr.io/immich-app/postgres:16-vectorchord0.5.3-pgvector0.8.1
          #image: ghcr.io/immich-app/postgres:16-vectorchord0.4.2-pgvector0.8.1-pgvectors0.2.1
          #image: ghcr.io/tensorchord/cloudnative-vectorchord:16.14
          ports:
            - containerPort: 5432 # Default PostgreSQL port
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data # Default PostgreSQL data directory
            - name: postgres-initdb
              mountPath: /docker-entrypoint-initdb.d # Directory for init scripts
          resources:
            requests:
              cpu: "150m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "2Gi"
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: virtiofs-psql-immich-claim
        - name: postgres-initdb
          configMap:
            name: immich-postgres-init-script
---
apiVersion: v1
kind: Service
metadata:
  name: immich-postgres-service
  namespace: immich # Ensure this matches your deployment namespace
  labels:
    app: immich-postgres
spec:
  selector:
    app: immich-postgres # Selects pods with this label
  ports:
    - protocol: TCP
      port: 5432 # Service port
      targetPort: 5432 # Container port
  type: ClusterIP # Exposes the service internally within the cluster
