applications/immich/templates/redis.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  namespace: immich
  labels:
    app: redis
spec:
  replicas: 1 # For a basic setup. For high availability, consider a StatefulSet with Sentinel or Cluster.
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:8-alpine # Using a stable and lightweight Redis image
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: redis-data
              mountPath: /data # Default Redis data directory
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "512Mi"
      volumes:
        - name: redis-data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: immich
  labels:
    app: redis
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379 # The port other applications will use to connect to Redis
      targetPort: 6379 # The port the Redis container is listening on
  type: ClusterIP # Exposes the service internally within the cluster
