applications/immich/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-immich
  namespace: immich
spec:
  hostnames:
    - immich-salaserver.linuxadmin.eu
    - immich-salaserver.vpn.linuxadmin.eu
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: cilium-gateway-https
      namespace: kube-system
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: immich-server
          port: 2283
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
